--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Hello, Azure Static Web Apps!</h1>
-    <p>This is a sample static website deployed on Azure.</p>
+    <p>This is a sample static website deployed on Azure.It is visible App.</p>
 </body>
 </html>
